k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quote-app
  labels:
    name: quote-app
    environment: production
